--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -8,13 +8,13 @@ jobs:
     name: Test and Lint
     runs-on: ubuntu-24.04
     steps:
-      - name: Login to Docker hub
-        uses: docker/login-action@v1
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
         with:
-          username: $({ secrets.DOCKERHUB_USER })
-          password: $({ secrets.DOCKERHUB_TOKEN })
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
       - name: Test
         run: docker compose run --rm app sh -c "python manage.py test"
       - name: Lint
